# datafusion-sharp

./: .gitignore  CONTRIBUTING.md  DataFusionSharp.sln.DotSettings  DataFusionSharp.slnx  NOTICE.txt  README.md
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/content/: index.md
examples/QueryCsv/: Program.cs  QueryCsv.csproj
examples/QueryData/: Program.cs  QueryData.csproj
examples/QueryDataWithDapper/: .editorconfig  Program.cs  QueryDataWithDapper.csproj
examples/QueryInMemoryData/: Program.cs  QueryInMemoryData.csproj
examples/QueryS3Data/: Program.cs  QueryS3Data.csproj
examples/QueryS3DataWithDapper/: Program.cs  QueryS3DataWithDapper.csproj
native/: Cargo.toml  README.md  build.rs
native/src/: callback.rs  cancellation.rs  common.rs  context.rs  dataframe.rs  error.rs  lib.rs  logger.rs  macros.rs  mappers.rs  memory_store.rs  runtime.rs
native/src/wire/: csv_generated.rs  mod.rs
native/src/wire/data_fusion_sharp/formats/: file_compression_type_generated.rs
native/src/wire/data_fusion_sharp/formats/csv/: csv_read_options_wire_generated.rs
proto/: csv.proto  dataframe.proto  json.proto  object_store.proto  parquet.proto
src/DataFusionSharp/: .editorconfig  ArrayExtensions.cs  ColumnExtensions.cs  DataFrame.cs  DataFrameStream.cs  DataFusion.cs  DataFusionErrorCode.cs  DataFusionException.cs  DataFusionNativeLogger.cs  DataFusionRuntime.cs  DataFusionSharp.csproj  ProtoArrowExtensions.cs  ProtoGenericExtensions.cs  README.md  ScalarValue.cs  SessionContext.cs  Wire.cs
src/DataFusionSharp.Data/: DataFusionSharp.Data.csproj  DataFusionSharp.Data.nuspec  DataFusionSharpCommand.cs  DataFusionSharpConnection.cs  DataFusionSharpDataReader.cs  DataFusionSharpParameter.cs  DataFusionSharpParameterCollection.cs  README.md
src/DataFusionSharp.SourceGenerators/: DataFusionSharp.SourceGenerators.csproj  NativeCallbackGenerator.cs
tests/DataFusionSharp.Benchmark/: DataFrameBenchmarks.cs  DataFusionSharp.Benchmark.csproj  (+2 more)
wire/: csv.fbs  formats.fbs
(+102 files in other folders)
