[package]
name = "datafusion-sharp-native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "unwind"
lto = "thin"

[profile.dev]
panic = "unwind"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
arrow-array = { version = "57.3.0", features = ["ffi"] }
datafusion = "52.2.0"
datafusion-proto = "52.2.0"
futures = "0.3.32"
object_store = { version = "0.12.5", features = ["aws", "azure", "gcp"] }
url = "2.5.8"
prost = "0.14.3"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }

[build-dependencies]
prost-build = "0.14.3"
