[package]
name = "datafusion-sharp-native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "unwind"
lto = "thin"

[profile.dev]
panic = "unwind"

[dependencies]
anyhow = "1.0.102"
arrow-array = { version = "57.3.0", features = ["ffi"] }
datafusion = "52.4.0"
datafusion-proto = "52.4.0"
futures = "0.3.32"
log = {version = "0.4.29", features = ["std"]}
object_store = { version = "0.12.5", features = ["aws", "azure", "gcp", "http"] }
prost = "0.14.3"
reqwest = { version = "0.12.28", default-features = false }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
url = "2.5.8"

[build-dependencies]
prost-build = "0.14.3"
